--- a/coordination_game/templates/coordination_game/Introduction.html
+++ b/coordination_game/templates/coordination_game/Introduction.html
@@ -11,9 +11,6 @@ Thank you for participating in this interactive decision-making experiment.
 Please read the instruction below. The experiment will start when everyone is ready.
 </p>
 
-<iframe src="{{ static 'bimatrix/instruction_bimatrix.pdf' }}" width="100%" height="700px">
-    </iframe>
-
-    <!-- {% next_button %} -->
+    {% next_button %}
 
 {% endblock %}
