--- a/coordination_game/templates/coordination_game/Introduction.html
+++ b/coordination_game/templates/coordination_game/Introduction.html
@@ -11,6 +11,8 @@ Thank you for participating in this interactive decision-making experiment.
 Please read the instruction below. The experiment will start when everyone is ready.
 </p>
 
+<embed src="{{static 'continuous_discrete/instruction_bimatrix.pdf'}}" type="application/pdf" width="95%" height="700px"/>
+
     {% next_button %}
 
 {% endblock %}
