update comm page

--- a/coordination_game/templates/coordination_game/ConfigUpdate.html
+++ b/coordination_game/templates/coordination_game/ConfigUpdate.html
@@ -7,6 +7,8 @@
 
 {% block content %}
 
+<p>You are now playing Game {{ subsession.round_number }}</p>
+
 <p>
 Please enter 0 if you prefer to play under the continuous time environment.
 </p>
