update pages text

--- a/coordination_game/templates/coordination_game/Communication.html
+++ b/coordination_game/templates/coordination_game/Communication.html
@@ -21,7 +21,7 @@
     {% elif not realtime %}
 
         <p>
-        Before the game starts, you can send a message to your counterpart indicating the time environment you would prefer.
+        Before the game starts, you can send a message to your counterpart discussing the time environment you would prefer.
         Please follow two rules: <br>
         1) Discrimination and malicious messages are NOT allowed. <br>
         2) Do NOT directly or indirectly disclose your identity. <br>
