--- a/coordination_game/templates/coordination_game/ConfigConfirmation.html
+++ b/coordination_game/templates/coordination_game/ConfigConfirmation.html
@@ -8,12 +8,11 @@
 {% block content %}
 
 {% if num_subperiods == 0 %}
-    <p>You will play the 2-minute game under the continuous time environment.</p>
+    <p>You will play the game under the continuous time environment.</p>
 {% else %}
-    <p>You will play the 2-minute game under the discrete time environment with {{ num_subperiods }} periods.</p>
+    <p>You will play the game under the discrete time environment with {{ num_subperiods }} periods.</p>
 {% endif %}
 
-    <p> {{ num_subperiods }} </p>
     <p> If you are ready, press next. </p>
 
     {% next_button %}
