--- a/coordination_game/templates/coordination_game/Decision.html
+++ b/coordination_game/templates/coordination_game/Decision.html
@@ -13,7 +13,7 @@
 
 {% block content %}
     {% with config=subsession.config %}
-        <p>You are now playing Game {{ subsession.round_number }}</p>
+        <p>You are now playing Game {{ subsession.round_number }}.</p>
         <leeps-bimatrix
             initial-decision='{{ player.initial_decision }}'
             payoff-matrix='{{ config.payoff_matrix }}'
