prepare for pilots

--- a/coordination_game/templates/coordination_game/IntroductionChoose.html
+++ b/coordination_game/templates/coordination_game/IntroductionChoose.html
@@ -42,6 +42,6 @@ the system will choose a time environment based on the experimental setting.
 Please raise your hands when you are ready for the second half of the experiment.
 </p>
 
-    {% next_button %}
+    <!-- {% next_button %} -->
 
 {% endblock %}
