--- a/coordination_game/templates/coordination_game/Introduction.html
+++ b/coordination_game/templates/coordination_game/Introduction.html
@@ -19,6 +19,6 @@ The experiment will start when everyone is ready.
 
 <embed src="{% static 'continuous_discrete/instruction_bimatrix.pdf' %}" type="application/pdf" width="95%" height="700px" />
 
-    {% next_button %}
+    <!-- {% next_button %} -->
 
 {% endblock %}
