--- a/coordination_game/templates/coordination_game/Payment.html
+++ b/coordination_game/templates/coordination_game/Payment.html
@@ -15,12 +15,12 @@ Congratulations! You have completed the experiment.
 </p>
 
 <p>
-  Before we end the session, please fill out the following post-experimental survey:
+  Before we end the session, please fill out the following post-experimental survey.
+  Thank you again for your participation!
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4HDM8QftKyun_LNkyU-fcSfAWVDwpcWu0w5tVYhJmtU-b4Q/viewform?embedded=true" width="640" height="1771" frameborder="0" marginheight="0" marginwidth="0">正在加载…</iframe>
   <!-- The server will stop 15 minutes after you see this page.
   So it is important to complete the survery immediately so your payment can be processed on time.
   You can close your browser after you submit the survey. -->
-  Thank you again for your participation!
 </p>
 
     <!-- {% next_button %} -->
