--- a/coordination_game/templates/coordination_game/ConfigUpdate.html
+++ b/coordination_game/templates/coordination_game/ConfigUpdate.html
@@ -10,11 +10,11 @@
 <p>You are now playing Game {{ subsession.round_number }}.</p>
 
 <p>
-Please enter 0 if you prefer to play under the continuous time environment.
+Please select 0 if you prefer to play under the continuous time environment.
 </p>
 
 <p>
-Please enter a positive integer if you prefer to play under the discrete time environment,
+Please select a positive integer if you prefer to play under the discrete time environment,
 where the interger you enter is the number of periods you would like to play.
 Note that the total length of the game is 90 seconds, so the more periods you play, the shorter each period lasts.
 </p>
